--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 header{
     height:60px;
     background-color: black;
@@ -8,9 +7,8 @@ header img{
 }
 header > nav{
     float:right;
-    background-color: rgba(0,0,0, 0.4)
+    background-color: rgba(0,0,0, 0.4);
     background-color: rgb(0,0,0);
-   
 }
 nav ul li{
     display: inline;
@@ -23,6 +21,9 @@ nav ul li a{
 }
 h1{
     text-align: center;
+}
+.container{
+    background-color: #65f909;
 }
 .container img{
     margin-left: 28%;
